# power-chess-rl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
chess_engine/: CMakeLists.txt
chess_engine/include/: engine.hpp  types.hpp
chess_engine/include/chess/: chess.hpp  config.hpp  engine.hpp  move.hpp  piece.hpp  state.hpp
chess_engine/include/units/: factory.hpp  unit.hpp
chess_engine/src/: bindings.cpp  engine.cpp
chess_engine/src/units/: base_unit.cpp  bishop.cpp  factory.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp  unit.cpp
chess_engine/tests/: CMakeLists.txt  test_bindings.cpp  test_engine.cpp  test_pawn.cpp  test_units.cpp
power_chess/engine/: __init__.py  _ccore.pyi
rl/: README.md  __init__.py
rl/env/: __init__.py  action_mapper.py  observation.py  power_chess_aec.py
rl/tests/: __init__.py  __main__.py  test_env.py
ui/: README.md  app.py  layout.py  textual.toml  theme.py
ui/models/: types.py
ui/pages/: ai_vs_ai.py  exit_page.py  hotseat.py  replay.py  vs_ai.py
ui/services/: ai_policy.py
ui/widgets/: agent_picker.py  board_view.py  control_bar.py  nav_tabs.py  replay_picker.py  status_bar.py
