[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12", "setuptools>=68", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "power-chess-rl"
version = "0.1.0"
description = "Custom 6x6 chess-like engine with PettingZoo RL, rich/textual UI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "You" }]
dependencies = [
  "numpy>=1.23",
  "pettingzoo>=1.24",
  "gymnasium>=0.29",
  "torch>=2.2",
  "rich>=13.7",
  "textual>=0.74",
  "tensorboard>=2.14",
]

[tool.scikit-build]
cmake.minimum-version = "3.20"
wheel.packages = ["power_chess"]
cmake.build-type = "Release"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "wandb"]

[tool.black]
line-length = 130

[tool.ruff]
line-length = 130
